refactor de controle de usuario e auth; criaçao de novas tabelas para refreshToken e userProvider pro google
