# docs/swagger.json
@@ -65,7 +65,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_auth.LoginRequest"
+                            "$ref": "#/definitions/internal_features_auth.LoginRequest"
                         }
                     }
                 ],
@@ -73,11 +73,52 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_auth.LoginResponse"
+                            "$ref": "#/definitions/internal_features_auth.LoginResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/password": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Nova senha",
+                "parameters": [
+                    {
+                        "description": "Password data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_features_auth.PasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -108,7 +149,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_auth.RefreshRequest"
+                            "$ref": "#/definitions/internal_features_auth.RefreshRequest"
                         }
                     }
                 ],
@@ -116,7 +157,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_auth.LoginResponse"
+                            "$ref": "#/definitions/internal_features_auth.LoginResponse"
                         }
                     },
                     "401": {
@@ -752,47 +793,6 @@
                 }
             }
         },
-        "/user/password": {
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Nova senha",
-                "parameters": [
-                    {
-                        "description": "Password data",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/internal_features_user.PasswordRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/user/{id}": {
             "get": {
                 "security": [
@@ -866,52 +866,22 @@
         "financial_control_internal_features_user.UserResponse": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "login": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
-                }
-            }
-        },
-        "internal_auth.LoginRequest": {
-            "type": "object",
-            "properties": {
-                "login": {
+                },
+                "phone": {
                     "type": "string"
                 },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "internal_auth.LoginResponse": {
-            "type": "object",
-            "properties": {
-                "access_token": {
-                    "type": "string"
-                },
-                "expires_in": {
-                    "type": "integer"
-                },
-                "refresh_token": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/financial_control_internal_features_user.UserResponse"
-                }
-            }
-        },
-        "internal_auth.RefreshRequest": {
-            "type": "object",
-            "properties": {
-                "refresh_token": {
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -1024,6 +994,59 @@
                 },
                 "value": {
                     "type": "number"
+                }
+            }
+        },
+        "internal_features_auth.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "googleToken": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_features_auth.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "expires_in": {
+                    "type": "integer"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/financial_control_internal_features_user.UserResponse"
+                }
+            }
+        },
+        "internal_features_auth.PasswordRequest": {
+            "type": "object",
+            "properties": {
+                "confirmPassword": {
+                    "type": "string"
+                },
+                "currentPassword": {
+                    "type": "string"
+                },
+                "newPassword": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_features_auth.RefreshRequest": {
+            "type": "object",
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
                 }
             }
         },
@@ -1177,27 +1200,13 @@
                 "email": {
                     "type": "string"
                 },
-                "login": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 },
                 "password": {
                     "type": "string"
-                }
-            }
-        },
-        "internal_features_user.PasswordRequest": {
-            "type": "object",
-            "properties": {
-                "confirmPassword": {
-                    "type": "string"
                 },
-                "currentPassword": {
-                    "type": "string"
-                },
-                "newPassword": {
+                "phone": {
                     "type": "string"
                 }
             }
@@ -1208,10 +1217,10 @@
                 "email": {
                     "type": "string"
                 },
-                "login": {
+                "name": {
                     "type": "string"
                 },
-                "name": {
+                "phone": {
                     "type": "string"
                 }
             }
@@ -1219,16 +1228,22 @@
         "internal_features_user.UserResponse": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "login": {
+                "name": {
                     "type": "string"
                 },
-                "name": {
+                "phone": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
