# internal/auth/dto.go
@@ -1,20 +1,0 @@
-package auth
-
-import "financial_control/internal/features/user"
-
-type LoginRequest struct {
-	Login       string `json:"login"`
-	Password    string `json:"password"`
-	GoogleToken string `json:"googleToken,omitempty"`
-}
-
-type LoginResponse struct {
-	AccessToken  string            `json:"access_token"`
-	RefreshToken string            `json:"refresh_token"`
-	ExpiresIn    int64             `json:"expires_in"`
-	User         user.UserResponse `json:"user"`
-}
-
-type RefreshRequest struct {
-	RefreshToken string `json:"refresh_token"`
-}
